update my swagger
